<resources>
    <string name="app_name">Meal_search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youtube">youtube</string>
    <string name="get_random_meal">Get Random Meal</string>
    <string name="source">Source</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="category">Category:</string>
    <string name="area">Area:</string>
    <string name="instruction">Instruction</string>
    <string name="meals_by_ingredients">Meals By Ingredients</string>
    <string name="search_for_meals">Search For Meals</string>
    <string name="meals_by_name">Meals By Name</string>
    <string name="log_in_">Log In</string>
    <string name="meal_details">Meal Details</string>
</resources>