<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.screen.registration.RegistrationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registration"
        android:layout_marginTop="20dp"
        android:textColor="@color/title"
        android:textSize="43sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegistrationEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="21sp"
        android:background="@drawable/button_style"
        android:text="@string/registration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnLogIn"
        android:layout_marginTop="30dp"
        android:text="@string/log_in_"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>